# latent_policy_network

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml  requirements-public.txt  requirements.txt
.cache/melee_light/: runtime_stamp.json
.cache/melee_light/runtime/: meleelight.html
.cache/melee_light/work/builder/: entry.js  runtime_bridge.js  streamclient-stub.js  webpack.config.js
.cache/melee_light/work/builder/vendor_src/main/: main.js
configs/: best.yaml  melee_light_gpu_elo.yaml  melee_light_lvl0.yaml  melee_light_lvl3.yaml  overnight.yaml  quick.yaml
latent_policy/: __init__.py  analyze.py  envs.py  evaluate.py  evaluation.py  melee_light_elo.py  melee_light_env.py  models.py  ppo.py  public_envs.py  public_suite.py  sweep.py  utils.py
latent_policy/melee_light_runtime/: action_map.json  action_specs.js  package.json  spectatorclient-stub.js
scripts/: run_melee_light_gpu_elo_experiment.sh  run_overnight_sweep.sh  run_public_suite.sh  run_quick_sweep.sh  update_melee_light_finish_docs.py  watch_melee_light.py
tests/: test_envs.py  test_evaluation.py  test_melee_light_elo.py  test_melee_light_env.py  test_models.py  test_public_envs.py  test_training_smoke.py
